--- a/app/config/modules/swiftmailer.yml
+++ b/app/config/modules/swiftmailer.yml
@@ -1,7 +1,9 @@
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
+    encryption: "%mailer_encryption%"
     host:      "%mailer_host%"
+    port:      "%mailer_port%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
